# CafeHub-Tauri-master

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
database/: cafehub.sql  testdata.sql
src/: App.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db_config.rs  lib.rs  main.rs  models.rs
src/api/: info.ts  lost.ts  message.ts  product.ts  user.ts
src/components/: AddGoodsBtn.tsx  AdminGoodsShareChart.tsx  AdminMonthlyConsumptionChart.tsx  AdminNavBar.tsx  AdminReciveBox.tsx  AdminReplyModal.tsx  AdminSentBox.tsx  AdminStatsCards.tsx  Cart.tsx  CusSendMessage.tsx  CustomNavBar.tsx  CustomerBalanceCard.tsx  CustomerBasicInfoCard.tsx  CustomerChangePasswordModal.tsx  CustomerConsumptionChart.tsx  CustomerEditProfileModal.tsx  CustomerRechargeCard.tsx  CustomerReciveBox.tsx  CustomerSentBox.tsx  EditGoodsBtn.tsx  FadeInOutlet.tsx  MessageContent.tsx  ProductInfo.tsx  ReportLost.tsx
src/directory/: AdminInfoPage.tsx  AdminLayout.tsx  AdminLostPage.tsx  AdminMessagePage.tsx  AdminProductPage.tsx  CustomerInfoPage.tsx  CustomerLayout.tsx  CustomerLostPage.tsx  CustomerMessagePage.tsx  CustomerProductPage.tsx  DBConfigPage.tsx  LoginPage.tsx  RegisterPage.tsx
src/icon/: WebTitle.tsx
src/router/: index.tsx
