[package]
name = "CafeHub"
version = "0.1.0"
description = "A Tauri App"
authors = ["RainAllln", "YorkWaugh", "pilotztb", "crabyang"]
edition = "2021"
rust-version = "1.86"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cafehub_lib"
crate-type = ["cdylib", "rlib", "staticlib"]

[build-dependencies]
cynic-codegen = { version = "3" }
tauri-build = { version = "2", features = [] }

[dependencies]
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
cynic = { version = "3", features = ["http-surf"] }
postgres = { version = "0.19.12", features = ["with-chrono-0_4"] }
r2d2_postgres = "0.18.2"
r2d2 = "0.8.10"
rust_decimal = { version = "1", features = ["serde-with-float", "db-postgres"] } 
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surf = "2"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
